--- a/public/student-info-test.html
+++ b/public/student-info-test.html
@@ -30,18 +30,68 @@
     <div class="flex-row">
       <div class="score-box composite">
         <p id="composite-score">TEST</p>
+        <div class="tooltip">
+          <div class="flex-row">
+            <p>Goal:</p>
+            <p id="composite-goal">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Hours:</p>
+            <p id="composite-total-hours">00</p>
+          </div>
+        </div>
       </div>
       <div class="score-box english">
         <p id="english-score">TEST</p>
+        <div class="tooltip">
+          <div class="flex-row">
+            <p>Goal:</p>
+            <p id="english-goal">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Hours:</p>
+            <p id="english-total-hours">00</p>
+          </div>
+        </div>
       </div>
       <div class="score-box math">
         <p id="math-score">TEST</p>
+        <div class="tooltip">
+          <div class="flex-row">
+            <p>Goal:</p>
+            <p id="math-goal">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Hours:</p>
+            <p id="math-total-hours">00</p>
+          </div>
+        </div>
       </div>
       <div class="score-box reading">
         <p id="reading-score">TEST</p>
+        <div class="tooltip">
+          <div class="flex-row">
+            <p>Goal:</p>
+            <p id="reading-goal">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Hours:</p>
+            <p id="reading-total-hours">00</p>
+          </div>
+        </div>
       </div>
       <div class="score-box science">
         <p id="science-score">TEST</p>
+        <div class="tooltip">
+          <div class="flex-row">
+            <p>Goal:</p>
+            <p id="science-goal">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Hours:</p>
+            <p id="science-total-hours">00</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
