--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -22,5 +22,9 @@
     <section id="loading-screen">
       <div class="loading-ring"></div>
     </section>
+
+    <button class="button" onclick="window.location.href='Admin.html'">Go to Admin</button>
+    <button class="button" onclick="window.location.href='Secretary.html'">Go to Secretary</button>
+    <button class="button" onclick="window.location.href='Tutor.html'">Go to Tutor</button>
   </body>
 </html>
