--- a/public/Dashboard/Secretary.html
+++ b/public/Dashboard/Secretary.html
@@ -7,6 +7,11 @@
     <link href="Secretary.css" rel="stylesheet">
     <link href="../Site Templates/site-wide.css" rel="stylesheet">
 
+    <!-- datatable requirments -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
@@ -33,7 +38,7 @@
         <button class="button" onclick="goToInquiry()">Inquiry</button>
       </div>
 
-      <div class="input-row">
+      <!-- <div class="input-row">
         <div class="input-block">
           <label class="label">Pending Students</label>
           <select id="pendingStudents" name="pending-student" onchange="pendingStudentSelected(this)">
@@ -47,6 +52,20 @@
             <option disabled selected>Choose a student</option>
           </select>
         </div>
+      </div> -->
+
+      <div>
+        <table id="student-table" class="display" width="100%">
+          <thead>
+            <tr>
+              <th>Student Name</th>
+              <th></th>
+              <th>Status</th>
+              <th>Parent Name</th>
+              <th></th>
+            </tr>
+          </thead>
+        </table>
       </div>
 
     </section>
