more tooltip data

--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -23,8 +23,11 @@
       <div class="loading-ring"></div>
     </section>
 
-    <button class="button" onclick="window.location.href='Admin.html'">Go to Admin</button>
-    <button class="button" onclick="window.location.href='Secretary.html'">Go to Secretary</button>
-    <button class="button" onclick="window.location.href='Tutor.html'">Go to Tutor</button>
+    <div class="flex-row">
+      <button class="button" onclick="window.location.href='Admin.html'">Go to Admin</button>
+      <button class="button" onclick="window.location.href='Secretary.html'">Go to Secretary</button>
+      <button class="button" onclick="window.location.href='Tutor.html'">Go to Tutor</button>
+    </div>
+    
   </body>
 </html>
