--- a/public/student-info-test.html
+++ b/public/student-info-test.html
@@ -29,7 +29,7 @@
     <h1 id="student-name"></h1>
     <div class="flex-row">
       <div class="score-box composite">
-        <p id="composite-score">TEST</p>
+        <p id="composite-score"></p>
         <div class="tooltip">
           <div class="flex-row">
             <p>Goal:</p>
@@ -39,10 +39,26 @@
             <p>Total Hours:</p>
             <p id="composite-total-hours">00</p>
           </div>
+          <div class="flex-row">
+            <p>Highest Score:</p>
+            <p id="composite-highest-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Initial Score:</p>
+            <p id="composite-initial-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Point Change:</p>
+            <p id="composite-point-change">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Hours per Point:</p>
+            <p id="composite-hours/point">00</p>
+          </div>
         </div>
       </div>
       <div class="score-box english">
-        <p id="english-score">TEST</p>
+        <p id="english-score"></p>
         <div class="tooltip">
           <div class="flex-row">
             <p>Goal:</p>
@@ -52,10 +68,26 @@
             <p>Total Hours:</p>
             <p id="english-total-hours">00</p>
           </div>
+          <div class="flex-row">
+            <p>Highest Score:</p>
+            <p id="english-highest-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Initial Score:</p>
+            <p id="english-initial-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Point Change:</p>
+            <p id="english-point-change">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Hours per Point:</p>
+            <p id="english-hours/point">00</p>
+          </div>
         </div>
       </div>
       <div class="score-box math">
-        <p id="math-score">TEST</p>
+        <p id="math-score"></p>
         <div class="tooltip">
           <div class="flex-row">
             <p>Goal:</p>
@@ -65,10 +97,26 @@
             <p>Total Hours:</p>
             <p id="math-total-hours">00</p>
           </div>
+          <div class="flex-row">
+            <p>Highest Score:</p>
+            <p id="math-highest-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Initial Score:</p>
+            <p id="math-initial-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Point Change:</p>
+            <p id="math-point-change">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Hours per Point:</p>
+            <p id="math-hours/point">00</p>
+          </div>
         </div>
       </div>
       <div class="score-box reading">
-        <p id="reading-score">TEST</p>
+        <p id="reading-score"></p>
         <div class="tooltip">
           <div class="flex-row">
             <p>Goal:</p>
@@ -78,10 +126,26 @@
             <p>Total Hours:</p>
             <p id="reading-total-hours">00</p>
           </div>
+          <div class="flex-row">
+            <p>Highest Score:</p>
+            <p id="reading-highest-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Initial Score:</p>
+            <p id="reading-initial-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Point Change:</p>
+            <p id="reading-point-change">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Hours per Point:</p>
+            <p id="reading-hours/point">00</p>
+          </div>
         </div>
       </div>
       <div class="score-box science">
-        <p id="science-score">TEST</p>
+        <p id="science-score"></p>
         <div class="tooltip">
           <div class="flex-row">
             <p>Goal:</p>
@@ -90,6 +154,22 @@
           <div class="flex-row">
             <p>Total Hours:</p>
             <p id="science-total-hours">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Highest Score:</p>
+            <p id="science-highest-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Initial Score:</p>
+            <p id="science-initial-score">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Total Point Change:</p>
+            <p id="science-point-change">00</p>
+          </div>
+          <div class="flex-row">
+            <p>Hours per Point:</p>
+            <p id="science-hours/point">00</p>
           </div>
         </div>
       </div>
