--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -13,6 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-storage.js"></script>
     <script src="../../Site Templates/site-wide.js" defer></script>
     <script src="../../Site Templates/generalFunctions.js" defer></script>
     <script src="Daily Log.js" defer></script>
@@ -225,6 +226,12 @@
 
                 <button class = "purple button" onclick="openForm()">
                     Back
+                </button>
+            </div>
+
+            <div class = "input-row-center">
+                <button class = "purple button" onclick="openTest()">
+                    Print
                 </button>
             </div>
 
