--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -29,8 +29,10 @@
     </section>
     <section id="section">
 
-        <div id = "sideNav">
+        <div id = "sideNav" class = "nav_disabled">
             <div id = "dailyLogNav" class = "button2" onclick = "openForm('dailyLog')">Daily Log</div>
+            <div id = "scoresNav" class = "button2" onclick = "openForm('dailyLog')">Scores</div>
+            <div id = "previousLogsNav" class = "button2" onclick = "openForm('dailyLog')">Logs</div>
         </div>
 
         <div id = "testAnswersPopup" class = "metaForm noselect">
