multiple centers for admins

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -130,6 +130,7 @@
             <tr>
               <th>Student Name</th>
               <th></th>
+              <th>Location</th>
               <th>Status</th>
               <th>Parent Name</th>
               <th></th>
